# comfyui-nodes-erpk

./: .gitignore  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
claude/: README.md  __init__.py  conversation.py  nodes.py  pricing.json  prompt_enhancer.py  requirements.txt  text_generation.py  token_counter.py  vision_analysis.py
claude/claude_api/: __init__.py  client.py  utils.py
gemini/: README.md  __init__.py  nodes.py  requirements.txt
gemini/gemini_api/: __init__.py  client.py  utils.py
wavespeed/: .gitignore  DEBUG_COMFYUI.md  README.md  __init__.py  config.ini  nodes.py  qwen_image_edit.py  qwen_image_edit_plus.py  qwen_image_text_to_image.py  requirements.txt  seedream_v4.py  seedream_v4_edit.py  seedream_v4_edit_sequential.py  seedream_v4_sequential.py
wavespeed/assets/: .gitkeep  README.md
wavespeed/wavespeed_api/: __init__.py  client.py  utils.py
wavespeed/wavespeed_api/requests/: qwen_image_edit.py  qwen_image_edit_plus.py  qwen_image_text_to_image.py  seedream_v4.py  seedream_v4_edit.py  seedream_v4_edit_sequential.py  seedream_v4_sequential.py
